// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactListItem > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="transition-colors duration-200 no-ligatures"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    0x28FA32ec11f64ae8Bc4223e77DeE4db24A5E46Da
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="h-4 relative mx-2 inline-block border-t-0 border-l border-solid align-middle height-[17px] border-theme-secondary-300 dark:border-theme-secondary-800 m-0!"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render as delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="transition-colors duration-200 no-ligatures"
                data-testid="TruncateEnd"
              >
                Caio
              </span>
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    id5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="h-4 relative mx-2 inline-block border-t-0 border-l border-solid align-middle height-[17px] border-theme-secondary-300 dark:border-theme-secondary-800 m-0!"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="transition-colors duration-200 no-ligatures"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    0x28FA32ec11f64ae8Bc4223e77DeE4db24A5E46Da
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="h-4 relative mx-2 inline-block border-t-0 border-l border-solid align-middle height-[17px] border-theme-secondary-300 dark:border-theme-secondary-800 m-0!"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render with multiple addresses 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="transition-colors duration-200 no-ligatures"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    0x28FA32ec11f64ae8Bc4223e77DeE4db24A5E46Da
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="h-4 relative mx-2 inline-block border-t-0 border-l border-solid align-middle height-[17px] border-theme-secondary-300 dark:border-theme-secondary-800 m-0!"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="ContactListItem"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-1 ml-3 space-x-4 whitespace-nowrap rounded-l transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex-1 w-0"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                    data-testid="Address__address"
                  >
                    DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-center items-center px-3 my-1 space-x-4 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="relative cursor-pointer ring-focus focus:outline-hidden"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-secondary-700 dark:text-theme-dark-200"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex items-center -mr-3"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="inline-flex relative justify-center items-center p-1 mr-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden dark:hover:bg-theme-secondary-700 hover:bg-theme-navy-200 focus:outline-hidden focus:ring-theme-primary-400"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="transition-colors duration-200 text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="10.002"
                              cy="2.99609"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 2.99609)"
                            />
                            <circle
                              cx="10.002"
                              cy="9.99805"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 9.99805)"
                            />
                            <circle
                              cx="10.002"
                              cy="17"
                              fill="currentColor"
                              r="2"
                              transform="rotate(90 10.002 17)"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
